fix overflowing content that causes horizontal scroll bar

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -77,6 +77,6 @@
   top: 50%
 }
 
-#lemon-music{
-  display: flex;
+.accomplishments{
+  text-align: left;
 }
