--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,14 @@
         }
     }
 }
+
+.row{
+    max-width: 100%;
+    // .mask{
+    //     border:solid red 4px;
+    //   }
+}
+
+.view.mask{
+    border:solid red 4px;
+}
